use-nginx-ingress-with-minikube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: echoheaders
spec:
  selector:
    app: echoheaders
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
